# Rtranslator_rebuild

./: .gitignore  CMakeLists.txt
docs/superpowers/plans/: 2026-06-15-rtranslator-plan.md  2026-06-19-rtranslator-ui-redesign.md
docs/superpowers/specs/: 2026-06-15-rtranslator-design.md  2026-06-19-rtranslator-ui-redesign.md
inject/: hook.js  state-reader.js  translation.js  ws-client.js
qml/: CButton.qml  CheatBtn.qml  DrawerShell.qml  EventTab.qml  FloatingShell.qml  GameStatePanel.qml  HomeTab.qml  HomeTabDrawer.qml  HomeTabMtool.qml  MapTab.qml  ModificationPanel.qml  MtoolShell.qml  SectionCard.qml  StatusBar.qml  StatusTab.qml  ThemeSwitcher.qml  TopBar.qml  TranslationPanel.qml  TranslationTab.qml  VariableTab.qml  main.qml  qml.qrc
src/: main.cpp
src/adapter/: IGameAdapter.h  RpgMVAdapter.cpp  RpgMVAdapter.h
src/app/: MainWindow.cpp  MainWindow.h  ThemeManager.cpp  ThemeManager.h
src/bridge/: CdpClient.cpp  CdpClient.h  Protocol.cpp  Protocol.h  WebSocketServer.cpp  WebSocketServer.h
src/core/: CheatController.cpp  CheatController.h  GameManager.cpp  GameManager.h  TranslationEngine.cpp  TranslationEngine.h
src/util/: JsonHelper.cpp  JsonHelper.h
tests/: CMakeLists.txt  test_cdp_client.cpp  test_cheat_controller.cpp  test_hook_js.js  test_integration.cpp  test_json_helper.cpp  test_main.cpp  test_protocol.cpp  test_rpgmv_adapter.cpp  test_translation_engine.cpp  test_websocket_server.cpp
tests/test_data/: sample_trans.json
